Changed one line

--- a/Website Portfolio/HTML/index.html
+++ b/Website Portfolio/HTML/index.html
@@ -113,6 +113,7 @@
                     <li>Mr. Robot</li>
                     <li>The Big Bang Theory</li>
                     <li>The Office</li>
+                    <li>Malcolm in the Middle</li>
                 </ul>
             </li>
             <li>Sports:
