Made it more Nicer!

--- a/Website Portfolio/HTML/index.html
+++ b/Website Portfolio/HTML/index.html
@@ -21,7 +21,7 @@
             <div class="intro-content">
                 <h3>Hello! My name is </h3>
                 <h1>Romeo Paul </h1>
-                <h3>  And I am a <span class="multiple-text"></span> </h3>
+                <h3 id="job-title">   And I am a <span class="multiple-text"></span> </h3>
                 <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint facere odit numquam distinctio? 
                     Aperiam quo consectetur officia unde? Nemo quod quas accusantium eaque labore! Assumenda quisquam 
                     repudiandae doloremque eligendi eveniet.</p>
@@ -33,6 +33,6 @@
         </section>
     
         <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-        <script src="script.js"></script>"
+        <script src="script.js"></script>
 </body >
 </html>
