--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
         <p><font face="Arial" color="white" size="4" >Welcome to my Portfolio!</font></p>
             <li><a href="https://github.com/verdentta" style="--i:3;">Projects/Github</a></li>
-            <li><a href="/Website Portfolio//Resources/Resume_Romeo_Paul.pdf" style="--i:2;">Résumé/Contact Info</a></li>
+            <li><a href="Resume_Romeo_Paul.pdf" style="--i:2;">Résumé/Contact Info</a></li>
             <li><a href="https://www.linkedin.com/in/romeo-paul-645152166/" style="--i:1;">Linkedin</a></li>
             
     </ul>
@@ -42,7 +42,7 @@
             </div>
 
             <div class="profile-picture">
-                <img src="/Website Portfolio//Resources/Portfolio Picture.jpg" alt="">
+                <img src="Portfolio Picture.jpg" alt="">
             </div>
             
         </section>
